chitter-bright: fix contrast on input for list names

--- a/app/javascript/styles/chitter-bright.scss
+++ b/app/javascript/styles/chitter-bright.scss
@@ -268,7 +268,8 @@ $ui-inverted-highlight-color: $ui-highlight-color;
   color: desaturate(lighten($ui-secondary-color, 50%), 50%);
 }
 
-.report-modal__comment .setting-text {
+.report-modal__comment .setting-text,
+.column-inline-form .setting-text {
   color: $primary-text-color;
 }
 
